# test-cmake-for-howard-hinnant-date-lib

./: .gitmodules  CMakeCPack.cmake  CMakeLists.txt  README.md
src/: CMakeLists.txt  demo.cpp
